--- a/arch/arm/configs/ville_defconfig
+++ b/arch/arm/configs/ville_defconfig
@@ -2049,6 +2049,7 @@ CONFIG_MT9V113=y
 # CONFIG_S5K6A1GX is not set
 # CONFIG_S5K6AAFX is not set
 # CONFIG_OV8830 is not set
+CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 CONFIG_RADIO_ADAPTERS=y
 # CONFIG_I2C_SI4713 is not set
@@ -2131,10 +2132,12 @@ CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_LOGO is not set
 CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
+CONFIG_FB_MSM_MDP_HW=y
 # CONFIG_FB_MSM_MDP22 is not set
 # CONFIG_FB_MSM_MDP30 is not set
 # CONFIG_FB_MSM_MDP31 is not set
 CONFIG_FB_MSM_MDP40=y
+# CONFIG_FB_MSM_MDP_NONE is not set
 # CONFIG_FB_MSM_EBI2 is not set
 # CONFIG_FB_MSM_MDDI is not set
 CONFIG_FB_MSM_MIPI_DSI=y
@@ -2179,6 +2182,7 @@ CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT=y
 CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
 CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
+# CONFIG_FB_MSM_OVERLAY1_WRITEBACK is not set
 # CONFIG_FB_MSM_WRITEBACK_MSM_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
@@ -2228,6 +2232,8 @@ CONFIG_FB_MSM_TVOUT_NONE=y
 # CONFIG_FB_MSM_DEFAULT_DEPTH_RGB565 is not set
 # CONFIG_FB_MSM_DEFAULT_DEPTH_ARGB8888 is not set
 CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
+# CONFIG_FB_MSM_EBI2_EPSON_S1D_QVGA_PANEL is not set
+# CONFIG_FB_MSM_EBI2_PANEL_DETECT is not set
 # CONFIG_FB_MSM_SELF_REFRESH is not set
 # CONFIG_FB_MSM_CABC is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
